se.css
@import url(https://fonts.googleapis.com/css?family=Lato:400,700);

html {
 font-family: "Lato", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 font-size: 16px;
 font-weight: 400;
 line-height: 24px;
}
body { margin: 0; color: rgba(68,68,68,.8); overflow-x: hidden; }
body.front header h1 { padding: 100px 0 }
body.front h1 { padding-top: 300px }
body.front nav#toc { top: 300px }

header {
 min-height: 100px;
 background-color: rgb(69,134,84);
 margin-bottom: 2em;
}
header h1 { padding: 50px 0; color: white; font-weight: normal; }
header a#home_link {
  text-transform: uppercase;
  border-top-left-radius: 2px;
  border-top-right-radius: 2px;
  color: #fff;
  padding-left: 15px;
  padding-right: 15px;
  float:left;
  width: auto;
  height: 30px;
  background-color: rgb(79,144,94);
}
header a#home_link:before { content: "‹ " }

header a#home_link:hover {
  background-color: rgb(89,154,104);
}

body, header, footer > div { padding: 0 50px }
body { padding-right: 40% }
header, footer { margin: 0 -50px; width: 100%; position: absolute; }

nav#toc {
 position: fixed;
 max-width: 250px;
 min-width: 100px;
 border: 1px solid rgb(69,134,84);
 border-radius: 3px;
 margin-left: 50px;
 left: 60%;
 top: 200px;
}
nav#toc h1 {
 margin: 0;
 padding: 0;
 font-size: 100%;
 text-transform: none;
}
nav#toc h1 a { color: rgb(234,234,234); background-color: rgb(69,134,84); }
nav#toc h1, nav#toc a { border-bottom: 1px solid rgb(224,224,224) }
nav#toc a {
 background-color: white;
 display: block;
 padding: .5em .8em;
 color: rgba(68,68,68,.8)
}
nav#toc > a:hover {
  background-color: #eceeed;
}

nav#toc a:last-child { border: 0 }
nav#toc a.current { background-color: rgb(120,161,108); color: white; }
nav#toc a.level3, nav#toc a.level4, nav#toc a.level5, nav#toc a.level6 {
 font-size: 85%;
 padding-left: 2em;
}

nav#pagination {
 border-color: rgb(210,210,210);
 border-style: solid;
 border-width: 0;
 border-top-width: 1px;
 border-bottom-width: 1px;
 margin: 3em 0 2em;
 font-weight: bold;
 display: table;
 width: 100%;
}
nav#pagination a { border: 0; display: table-cell; width: 50%; padding: 1.2em 0 }
nav#pagination .next { text-align: right }
nav#pagination a.prev:link:before { content: "‹ " }
nav#pagination a.next:link:after { content: " ›" }

footer {
 margin-top: 6em;
 background-color: rgb(69,134,84);
 color: rgb(234,234,234);
 line-height: 120%;
}
footer > div { padding-top: 1.2em; padding-bottom: 1.2em; }
footer p { margin: 0 }
footer .links { background-color: rgb(120,161,108) }
footer .meta { font-size: 85%; color: rgb(120,161,108); }
footer .meta * { margin: 0 }
footer .meta > * { margin-left: 70% }
footer .meta a { color: rgb(181,201,182) }
footer .meta a:hover { border-bottom-color: rgb(181,201,182) }
footer .meta ul { padding: 0; list-style: none }
footer .meta ul li { display: inline; margin-right: .8em; }
footer .meta ul li:last-child { margin-right: 0 }

a {
 color: rgb(120, 161, 108);
 border-bottom: 2px solid rgba(120,161,108,.5);
 text-decoration: none;
}
a:hover { color: rgb(69,134,84) }

h1, h2, h3 { color: rgb(69,134,84); line-height: 120%; }
h1, h2 { text-transform: uppercase }
h1 { margin: 0; padding-top: 200px; }
h2 { margin-top: 2.6em }
h3 { margin-top: 1.8em }

pre, code { font-family: "Inconsolata", "Consolas", "Menlo", "Monaco", monospace; font-size: 90%; }
pre {
 border: 1px solid rgb(234,234,234);
 border-radius: 3px;
 line-height: 120%;
 padding: .8em 1em;
 white-space: pre-wrap;
 word-wrap: break-word;
}
pre code { font-size: 100% }

ul li { margin-bottom: .8em }
ul li ul li { margin-bottom: 0 }
dl { margin-left: 1em }
dl dt { font-weight: bold }
dl dd { margin-bottom: 1em }

#authors ul { padding: 0 }
#authors li { list-style: none; display: inline; }
#authors li:after { content: ", " }
#authors li:last-child:after { content: "" }

@media only screen and (max-width: 820px) {
 body { padding-right: 50px }
 nav#toc {
  position: relative;
  left: 0;
  margin-left: 0;
 }
}

.tabs li { display: inline; margin: 5px;}

.tab, .tab:target ~ div[id ^= java]  {
 display: none;
}

div[id ^= java], .tab:target {
 display: block;
}

